# ibx-cli

./: .gitignore  README.md  pyproject.toml
src/ibxcli/: __init__.py  __main__.py
src/ibxcli/cli/: config.py  dhcp.py  dns.py  infra.py  main.py  search.py
src/ibxcli/core/: client.py  config.py  exceptions.py  query.py
src/ibxcli/formatters/: base.py  csv_fmt.py  json_fmt.py  table.py
src/ibxcli/objects/: __init__.py  base.py  dhcp.py  dns.py  infra.py
tests/: test_dns_fields.py
